# research_server_etl

./: .env.template  .envrc  .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/actions/asdf_tools/: action.yaml
.github/actions/deploy/: action.yaml  deploy.sh
.github/actions/python_dependencies/: action.yaml
.github/workflows/: ci.yaml  deploy_and_run.yaml  deploy_to_prod.yaml
src/research_etl/: pipeline.py
src/research_etl/etl-gtfs/: gtfs_schema.py  job.py
src/research_etl/etl-korbato/: job.py
src/research_etl/etl_afc/: afc_job.py  job.py  lookup_tables.py
src/research_etl/etl_gtfs/: gtfs_job.py  gtfs_schema.py
src/research_etl/etl_korbato/: job.py  korbato_job.py
src/research_etl/mbta_open_data/: BoxConnector.ipynb  csat_job.py  gse_job.py
src/research_etl/mbta_open_data/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
src/research_etl/mbta_open_data/Token/: BOX_TOKEN.json
src/research_etl/mbta_open_data/archive/: csat.R  gse.R
src/research_etl/utils/: util_aws.py  util_logging.py  util_rds.py  util_sftp.py
tests/files/: init_schema.sql
